--- a/enterprise-file-processor/package.json
+++ b/enterprise-file-processor/package.json
@@ -22,17 +22,22 @@
   "author": "Josh",
   "license": "MIT",
   "dependencies": {
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "express-ejs-layouts": "^2.5.1",
-    "multer": "^1.4.4",
-    "socket.io": "^4.7.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.0",
-    "winston": "^3.10.0",
-    "node-cron": "^3.0.2",
+    "commander": "^11.0.0",
+    "connect-sqlite3": "^0.9.16",
+    "convex": "^1.25.4",
+    "cookie-parser": "^1.4.7",
     "csv-parser": "^3.0.0",
-    "commander": "^11.0.0"
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.4",
+    "node-cron": "^3.0.2",
+    "socket.io": "^4.7.2",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
